--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,18 @@
             <artifactId>spring-boot-starter-mail</artifactId>
             <version>2.3.4.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>com.rabbitmq.jms</groupId>
+            <artifactId>rabbitmq-jms</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.qpid</groupId>
+            <artifactId>qpid-amqp-1-0-client-jms</artifactId>
+            <version>0.32</version>
+        </dependency>
+
+
     </dependencies>
 
 
